# SavvyCAN

./: .gitignore  CMakeLists.txt  Makefile.Debug  Makefile.Release  README.md  SESSION_2026-05-20.md  SESSION_2026-05-21.md  SavvyCAN.pro  SavvyCAN_resource.rc  icons.qrc  iplugin.h  mainwindow.cpp  mainwindow.h  make_portable.sh  pluginmanager.cpp  pluginmanager.h  pythonbridge.cpp  pythonbridge.h  pythonconsole.cpp  pythonconsole.h  restapiserver.cpp  restapiserver.h  send_bridge.py  send_pcan.py  send_rest.py
.github/workflows/: android-apk.yml  ci.yml
android/: AndroidManifest.xml  BUILDING.md  CMakeLists.txt  android.qrc  build.gradle
android/mock_serialbus/: canconmanager_stub.cpp  mainwindow.h  mainwindow_moc.cpp  mock_httpserver.h  mock_python.h  mock_websockets.h  qcanbus.h  qcanbusdevice.cpp  qcanbusdevice.h  qcanbusframe.cpp  qcanbusframe.h  qserialport.cpp  qserialport.h  stub_mainwindow.h
android/mock_serialbus/connections/: canconmanager.h
android/qml/: CANBridgePage.qml  ConnectionPage.qml  DBCEditorPage.qml  FileComparePage.qml  FileIOPage.qml  FrameListPage.qml  FrameSenderPage.qml  FuzzingPage.qml  GraphPage.qml  ISOTPPage.qml  MainView.qml  PlaybackPage.qml  SettingsPage.qml  SignalViewerPage.qml  SnifferPage.qml  UDSScannerPage.qml
android/res/values/: strings.xml  theme.xml
android/res/xml/: device_filter.xml
android/src/com/savvycan/android/: BleHelper.java
bus_protocols/: isotp_handler.cpp  j1939_handler.cpp  j1939_handler.h  j1939_structs.h  uds_handler.cpp
cmake/: FindQt6Missing.cmake
connections/: canconconst.h  canconfactory.cpp  canconmanager.cpp  canconmanager.h  canconnection.cpp  canconnection.h  canconnectionmodel.cpp  canconnectionmodel.h  canlogserver.cpp  canlogserver.h  canserver.cpp  canserver.h  connectionwindow.cpp  connectionwindow.h  esp32_ble_connection.cpp  esp32_ble_connection.h  esp32_wifi_connection.cpp  esp32_wifi_connection.h  gvretserial.cpp  gvretserial.h  lawicel_serial.cpp  lawicel_serial.h  mqtt_bus.cpp  mqtt_bus.h  newconnectiondialog.cpp  newconnectiondialog.h  serialbusconnection.cpp  serialbusconnection.h  socketcand.cpp  socketcand.h
dbc/: dbc_classes.cpp  dbchandler.cpp  dbchandler.h  dbcloadsavewindow.h  dbcmaineditor.cpp  dbcmaineditor.h  dbcmessageeditor.h  dbcnodeduplicateeditor.cpp  dbcnodeduplicateeditor.h  dbcnodeeditor.h  dbcnoderebaseeditor.cpp  dbcnoderebaseeditor.h  dbcsignaleditor.cpp  dbcsignaleditor.h
debug/: object_script.SavvyCAN.Debug
esp32_firmware/ble_can_bridge/: ble_can_bridge.ino
esp32_firmware/ble_led_control/: ble_led_control.ino
esp32_firmware/mcp2515_scanner/: mcp2515_scanner.ino
lin/: lin_can_bridge.cpp  lin_can_bridge.h  lin_connection.cpp  lin_connection.h  lin_fileio.cpp  lin_fileio.h  lin_structs.h
lin/lin_diag/: lin_diag_handler.cpp  lin_diag_handler.h
lin/lin_schedule/: lin_schedule_view.cpp  lin_schedule_view.h
lin/lin_sniffer/: lin_sniffer_window.cpp  lin_sniffer_window.h
mqtt/: qmqtt_client_p.cpp  qmqtt_network.cpp
re/: dbccomparatorwindow.cpp  dbccomparatorwindow.h  discretestatewindow.cpp  discretestatewindow.h  filecomparatorwindow.cpp  filecomparatorwindow.h  flowviewwindow.cpp  flowviewwindow.h  frameinfowindow.cpp  frameinfowindow.h  fuzzingwindow.cpp  fuzzingwindow.h  graphingwindow.cpp  graphingwindow.h  isotp_interpreterwindow.cpp  isotp_interpreterwindow.h  j1939window.cpp  j1939window.h  newgraphdialog.cpp  newgraphdialog.h  rangestatewindow.cpp  rangestatewindow.h  temporalgraphwindow.cpp  temporalgraphwindow.h  udsfirmwareuploaderwindow.cpp  udsfirmwareuploaderwindow.h  udsscanwindow.cpp  udsscanwindow.h
re/sniffer/: SnifferDelegate.cpp  SnifferDelegate.h  sniffermodel.cpp  sniffermodel.h  snifferwindow.cpp  snifferwindow.h
release/: object_script.SavvyCAN.Release
src/android/: BleManager.cpp  BleManager.h  BluetoothManager.cpp  BluetoothManager.h  FrameListModel.cpp  FrameListModel.h  UsbHostManager.cpp  UsbHostManager.h  WifiManager.cpp  WifiManager.h  main_android.cpp
src/app/: main.cpp  mainwindow.cpp  mainwindow.h
src/core/: can_structs.h  config.h  futuristic_theme.cpp  futuristic_theme.h  simplecrypt.cpp
src/io/: blfhandler.cpp  framefileio.cpp  pcaplite.cpp
src/models/: canframemodel.cpp  canframemodel.h  filterutility.cpp  filterutility.h  framestore.cpp  framestore.h
src/views/: bisectwindow.cpp  bisectwindow.h  canbridgewindow.h  candatagrid.cpp  candatagrid.h  frameplaybackobject.cpp  frameplaybackwindow.cpp  frameplaybackwindow.h  framesenderobject.cpp  framesenderobject.h  framesenderwindow.cpp  framesenderwindow.h  helpwindow.h  jsedit.cpp  jsedit.h  mainsettingsdialog.cpp  mainsettingsdialog.h  motorcontrollerconfigwindow.cpp  motorcontrollerconfigwindow.h  scriptcontainer.cpp  scriptingwindow.cpp  scriptingwindow.h  sidebarwidget.cpp  sidebarwidget.h  signalviewerwindow.cpp  signalviewerwindow.h  triggerdialog.cpp  triggerdialog.h  windowregistry.cpp  windowregistry.h
stubs/: QHttpServer  QTcpServer  QWebSocket  QWebSocketServer
test/: CMakeLists.txt  framestore_test.cpp  test_canstructs.cpp  test_dbc.cpp  test_fileio.cpp  test_framesender_regression.cpp  tst_lfqueue.cpp
translations/: SavvyCAN_pl.qm  SavvyCAN_pl.ts
ui/: mainsettingsdialog.ui  mainwindow.ui  newconnectiondialog.ui  udsfirmwareuploaderwindow.ui
utils/: lfqueue.h
